--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reactproj",
   "version": "0.1.0",
+  "homepage": "http://sunb3am.github.io/PenFiddl",
   "proxy": "https://pastebin.com/api/api_post.php",
   "private": true,
   "dependencies": {
@@ -20,6 +21,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
